--- a/VAE_trainer.ipynb
+++ b/VAE_trainer.ipynb
@@ -463,6 +463,15 @@
     "        pred = model(train_dataset[random_index][0].unsqueeze(0))[0] #just get mu_x\n",
     "        axs[i//4,i%4].imshow(pred.reshape(28, 28),cmap='gray')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model.state_dict(), 'torch_models/VAE_model_vanilla.pt')"
+   ]
   }
  ],
  "metadata": {
