--- a/LAND_Experiment.ipynb
+++ b/LAND_Experiment.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*LAND* experiment of the paper: we were not able to fully reproduce this experiment."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -274,8 +281,7 @@
     }
    ],
    "source": [
-    "# Fonction permettant de récupérer 40 échantillons \"représentatif\" de la base de donénées\n",
-    "\n",
+    "# Get 40 representative samples from the dataset\n",
     "labels_np = labels.detach().numpy()\n",
     "p0 = np.sum(labels_np == 0) / len(labels_np)\n",
     "p1 = np.sum(labels_np == 1) / len(labels_np)\n",
@@ -285,15 +291,15 @@
     "indices_class_0 = np.where(labels_np == 0)[0]\n",
     "indices_class_1 = np.where(labels_np == 1)[0]\n",
     "\n",
-    "# Échantillonnage stratifié sans remise\n",
+    "# Stratified sample without replacement\n",
     "sample_indices_class_0 = np.random.choice(indices_class_0, 20, replace=False)\n",
     "sample_indices_class_1 = np.random.choice(indices_class_1, 20, replace=False)\n",
     "\n",
-    "# Combine les indices des deux classes pour obtenir l'échantillon final\n",
+    "# Combine the indices of the two classes to get the final sample\n",
     "sample_indices = np.concatenate((sample_indices_class_0, sample_indices_class_1))\n",
     "np.random.shuffle(sample_indices)  # Mélangez-les pour ajouter de la randomisation\n",
     "\n",
-    "# Échantillonnez les données et les étiquettes\n",
+    "# Sample the data and the labels\n",
     "sample_data = latent_means_np[sample_indices]"
    ]
   },
@@ -854,18 +860,14 @@
     "from core.geometric_methods import land_predict, land_mixture_model\n",
     "data = sample_data\n",
     "\n",
-    "# Compute some random curve using a heuristic graph solver -> Se basant sur ce qu'on a fait avant\n",
+    "# Compute some random curve using a heuristic graph solver \n",
     "GRAPH_DATA = KMeans(n_clusters=12, max_iter=100).fit(data).cluster_centers_\n",
     "solver_graph = geodesics.SolverGraph(manifold_latent, data=GRAPH_DATA, kNN_num=5, tol=0.2)\n",
-    "\n",
-    "# Compute some random curve using a heuristic graph solver -> Proche de leurs fonctions example 3\n",
-    "#GRAPH_DATA = KMeans(n_clusters=12).fit(data).cluster_centers_\n",
-    "#solver_graph = geodesics.SolverGraph(manifold_latent, data=GRAPH_DATA, kNN_num=5, tol=1e-2)\n",
     "\n",
     "data = sample_data\n",
     "param = {}\n",
     "param[\"means\"] = KMeans(n_clusters=2).fit(data).cluster_centers_ # GRAPH_DATA = KMeans(n_clusters=64, n_init=30, max_iter=1000).fit(latent_means_np).cluster_centers_\n",
-    "param[\"K\"] = 2 # number of clusters -> à changer par X.shape[1]\n",
+    "param[\"K\"] = 2 # number of clusters\n",
     "param[\"S\"] = 10 # We wand to use 40 samples to normalize the distribution land \n",
     "param['max_iter'] = 10\n",
     "param['tol'] = 0.2 # 0.1\n",
@@ -913,13 +915,6 @@
     "plt.imshow(pdf_vals.reshape(N_Z_grid, N_Z_grid), interpolation='bicubic',\n",
     "           extent=(z1min, z1max, z2min, z2max), origin='lower')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
