Fix import issues

--- a/experiments/LAND_Experiment.ipynb
+++ b/experiments/LAND_Experiment.ipynb
@@ -16,6 +16,8 @@
     "import numpy as np\n",
     "import torch\n",
     "import torch.nn as nn\n",
+    "import sys\n",
+    "sys.path.append('../')\n",
     "from core import VAE,RBFNN,VAE_RBF,utils,manifolds,geodesics\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.cluster import KMeans\n",
@@ -933,7 +935,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
