--- a/experiments/interpolation_experiment.ipynb
+++ b/experiments/interpolation_experiment.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import torch\n",
     "import torch.nn as nn\n",
+    "import sys\n",
+    "sys.path.append('../')\n",
     "from core import VAE,RBFNN,VAE_RBF,utils,custom_geodesics,riemannian_metric\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.cluster import KMeans\n",
