--- a/experiments/simpler_dataset.ipynb
+++ b/experiments/simpler_dataset.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import torch\n",
     "import torch.nn as nn\n",
+    "import sys\n",
+    "sys.path.append('../')\n",
     "from core import VAE,RBFNN,VAE_RBF,utils,manifolds,geodesics\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.cluster import KMeans\n",
@@ -1324,7 +1326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
