--- a/trainers_and_results/VAERBF_results.ipynb
+++ b/trainers_and_results/VAERBF_results.ipynb
@@ -9,6 +9,8 @@
     "import numpy as np\n",
     "import torch\n",
     "import torch.nn as nn\n",
+    "import sys\n",
+    "sys.path.append('../')\n",
     "from core import VAE,RBFNN,VAE_RBF,utils,manifolds,geodesics\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.cluster import KMeans\n",
